# rust-library-books

./: README.md
rust-book-manager/: .Cargo.toml.swp  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
rust-book-manager/.cargo/: config.toml
rust-book-manager/.github/workflows/: .ci.yaml
rust-book-manager/adapter/migrations/: 20241201214857_start.down.sql  20241201214857_start.up.sql
rust-book-manager/adapter/src/database/: mod.rs
rust-book-manager/adapter/src/database/model/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
rust-book-manager/adapter/src/redis/: mod.rs
rust-book-manager/adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
rust-book-manager/adapter/src/repository/fixtures/: book.sql  common.sql
rust-book-manager/api/: Cargo.toml
rust-book-manager/api/src/: extractor.rs
rust-book-manager/api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
rust-book-manager/api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
rust-book-manager/api/src/route/: auth.rs  book.rs  health.rs  mod.rs  user.rs  v1.rs
rust-book-manager/api/tests/api/: book.rs  helper.rs  main.rs
rust-book-manager/data/: initial_setup.sql
rust-book-manager/kernel/src/model/: id.rs  list.rs  mod.rs  role.rs
rust-book-manager/kernel/src/model/auth/: event.rs  mod.rs
rust-book-manager/kernel/src/model/book/: event.rs  mod.rs
rust-book-manager/kernel/src/model/checkout/: event.rs  mod.rs
rust-book-manager/kernel/src/model/user/: event.rs  mod.rs
rust-book-manager/kernel/src/repository/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
rust-book-manager/registry/src/: lib.rs
rust-book-manager/shared/src/: config.rs  env.rs  error.rs
