[package]
name = "rust-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
async-trait = "0.1.83"
anyhow = "1.0.94"
axum = { version = "0.7.5", features = ["macros"] }
derive-new = "0.7.0"
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
secrecy = "0.10.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.42.0", features = ["full"] }
rstest = "0.23.0"
thiserror = "2.0.4"

[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
