[package]
name = "rust-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
async-trait = "0.1.83"
anyhow = "1.0.94"
axum = { version = "0.7.5", features = ["macros"] }
derive-new = "0.7.0"
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
secrecy = "0.10.3"
sqlx = { version = "0.8.2", default-features = false,features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
mockall = "0.13.1"
redis = { version = "0.27.6", features = ["tokio-rustls-comp"] }
bcrypt = "0.16.0"
itertools = "0.13.0"
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["log"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio-stream = "0.1.17"
garde = { version = "0.20.0", features = ["derive", "email"] }
rstest = "0.23.0"

[dependencies]
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
utoipa.workspace = true
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
opentelemetry = "0.27.1"
tracing-opentelemetry = "0.28.0"

[profile.dev.package.sqlx-macros]
opt-level = 3